--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower": "1.3.12",
     "govuk_frontend_toolkit": "3.1.0",
     "gulp": "3.8.7",
+    "gulp-include": "1.1.1",
     "gulp-uglifyjs": "0.6.0",
     "del": "1.1.1",
     "gulp-sass": "1.3.3",
